fix overlapping styling labels

--- a/client/src/components/movie-view/movie-view.scss
+++ b/client/src/components/movie-view/movie-view.scss
@@ -11,7 +11,7 @@ $white: #fff;
   background-color: $grey;
 }
 
-.movie-details {
+.details {
   background-color: $grey;
 }
 
